@@ -1,3 +1,6 @@
+Consider if Segment::m_xRef could become a float and multiply by m_res on
+initialisation, as it is always used this way.
+
 In Terrain::getHeightAndNormal, the calculation for values passed to
 Segment::get() needs to be checked. Its seems to result in strange values
 being passed.
